@@ -1,3 +1,11 @@
+2014-06-15  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Flavour thresholds in alpha_s solvers, and threshold subgrids from ODE solver (by Karl Nordstrom)
+
+	* Add Python mapping of the AlphaS interface (but no setting... yet).
+
+	* Add accessors to a PDF's AlphaS object and to an AlphaS' QCD order.
+
 2014-06-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Bump version number for next release.
